Changed contrast issues

--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -5,7 +5,7 @@
 }
 nav a {
     text-align: center;
-    color:#0041cc;
+    color:#5911A7;
     text-decoration: none;
 }
 #hero-msg h1 {
@@ -27,51 +27,51 @@ body {
     background-color:white;
 }
 header {
-    background-color:#F4AC45;
+    background-color:#F5BB00;
 }
 nav a:hover {
-    background-color:#ff0000;
-    color:#0041cc;
+    background-color:#62C370;
+    color:#5911A7;
 }
 .home-title {
-    color:#0041cc;
+    color:#5911A7;
 }
 h4 {
-    color:#0041cc;
+    color:#5911A7;
 }
 .book {
-    color:#0041cc;
+    color:#5911A7;
     text-decoration: none;
 }
 .join {
-    color:#0041cc;
+    color:#5911A7;
     text-decoration: none;
 }
 .book:hover {
-    color: #ff0000;
+    color: #62C370;
 }
 .join:hover {
-    color:#ff0000;
+    color:#62C370;
 }
 .msg h2 {
-    color:#0041cc;
+    color:#5911A7;
 }
 .msg p {
-    color:#0041cc;
+    color:#5911A7;
 }
 .msg {
-    background-color: #F4AC45;
+    background-color: #F5BB00;
 }
 footer {
-    color:#0041cc;
-    background-color: #F4AC45;
+    color:#5911A7;
+    background-color: #F5BB00;
 }
 footer a {
-    color:#0041cc;
+    color:#5911A7;
     text-decoration: none;
 }
 footer a:hover {
-    color:#ff0000;
+    color:#62C370;
 }
 .logo {
     width:80px;
